Fix: CORS issue with backend authentication
The commit addresses a CORS issue that was blocking requests to the backend authentication endpoint. The error message indicates that the wildcard '*' for 'Access-Control-Allow-Origin' is not allowed when credentials are included.